# conformal_prediction_in_large_dimensions

./: .gitignore  README.md  pyproject.toml
notebooks/: flow_matching.ipynb  neural_quantile_regression.ipynb  rectified_conservative_flows.ipynb  rectified_flows.ipynb  rectified_jacobian_flows.ipynb  schrodinger_bridge.ipynb
poc/: atc_sandbox.ipynb  sandbox.ipynb  sandbox_entropic_ot.ipynb  sandbox_imf.ipynb  synthetic_data_sandbox.ipynb
src/classes/: __init__.py  protocol.py  pushforward_operators.py  synthetic_dataset.py  training.py
src/datasets/: __init__.py
src/datasets/real_datasets/: __init__.py  act_preprocesser.py
src/datasets/synthetic_datasets/convex/picnn/: __init__.py  picnn_base_dataset.py  picnn_fnlvqr_banana.py  (+2 more)
src/datasets/synthetic_datasets/custom/: __init__.py  banana.py  neals_funnel.py  not_conditional_banana.py
src/datasets/synthetic_datasets/fnlvqr/: __init__.py  banana.py  glasses.py  mvn.py  star.py
src/pushforward_operators/: __init__.py  picnn.py
src/pushforward_operators/flow_quantile_regression/: __init__.py  flow_matching.py  rectified_conservative_flow.py  rectified_flow.py  rectified_jacobian_flow.py
src/pushforward_operators/neural_quantile_regression/: __init__.py  amortized_neural_quantile_regression.py  entropic_neural_quantile_regression.py  neural_quantile_regression.py
src/pushforward_operators/schrodinger_bridge/: __init__.py  schrodinger_bridge.py
src/pushforward_operators/utilities/: __init__.py  distribution.py  history.py  logging.py  network.py  optimization.py  plot.py
src/utils/: plot.py  quantile.py
(+6 files in other folders)
