[project]
name = "cpild"
version = "0.1.0"
description = "Conformal prediction in large dimensions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "jax>=0.8.0",
    "matplotlib>=3.10.8",
    "ott-jax>=0.6.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
notebooks = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
]
