[project]
name = "cpild"
version = "0.1.0"
description = "Conformal prediction in large dimensions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "jax>=0.8.0",
    "matplotlib>=3.10.8",
    "ott-jax>=0.6.0",
    "pandas>=2.3.3",
    "pot>=0.9.6.post1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
notebooks = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
]

[tool.taskipy.tasks]
format = "yapf -i -r src"

[tool.yapf]
based_on_style = "pep8"
column_limit = 88
dedent_closing_brackets = true

[tool.uv]
package = true
